# mcp-servers

./: .env  .gitignore  MCP.md  Makefile  README.md  config.yaml  docker-compose.yaml  prometheus.yml
docker/base/bun/: Dockerfile
docker/base/go/: Dockerfile
docker/base/java/: Dockerfile
docker/base/python/: Dockerfile
docker/gateways/agentgateway/: Dockerfile
docker/mcp/memory/: Dockerfile  README.md  tsconfig.json
docker/mcp/perplexity-ask/: Dockerfile
docker/mcp/sequentialthinking/: Dockerfile  tsconfig.json
docker/mcp/time/: .dockerignore  Dockerfile  README.md  pyproject.toml
docker/mcp/time/src/: server.py
docker/mcp/time/src/mcp_server_time/: __init__.py  server.py
docker/mcp/time/test/: time_server_test.py
docker/sdk/a2a/: Dockerfile
docker/sdk/adk/: Dockerfile  pyproject.toml
docker/sdk/crew-ai/: .dockerignore  Dockerfile  pyproject.toml
docker/sdk/langchaingo/: Dockerfile  go.mod  go.sum
docker/sdk/langgraph/: Dockerfile
docker/sdk/spring-ai/: Dockerfile  pom.xml
